// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`IconField renders 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c1 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  width: 24px;
}

.c2 {
  outline: none;
}

.c3 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  display: block;
  width: 100%;
  font-family: inherit;
  color: inherit;
  background-color: transparent;
  border-radius: 2px;
  border-width: 1px;
  border-style: solid;
  padding-top: 14px;
  padding-bottom: 14px;
  padding-left: 12px;
  padding-right: 12px;
  margin: 0;
  border-color: #c0cad5;
  font-size: 16px;
}

.c3::-webkit-input-placeholder {
  color: #4f6f8f;
}

.c3::-moz-placeholder {
  color: #4f6f8f;
}

.c3:-ms-input-placeholder {
  color: #4f6f8f;
}

.c3::placeholder {
  color: #4f6f8f;
}

.c3::-ms-clear {
  display: none;
}

.c3:focus {
  outline: 0;
  border-color: #007aff;
  box-shadow: 0 0 0 2px #007aff;
}

@media screen and (min-width:40em) {
  .c3 {
    font-size: 14px;
  }
}

<div
  className="c0"
>
  <svg
    aria-hidden={true}
    className="c1 c2"
    fill="currentcolor"
    focusable={false}
    height={24}
    role="img"
    style={
      Object {
        "alignSelf": "center",
        "flex": "none",
        "marginLeft": 8,
        "marginRight": -32,
        "pointerEvents": "none",
        "position": "relative",
      }
    }
    tabIndex={-1}
    viewBox="0 0 24 24"
    width={24}
  >
    <path
      d="M9 11H7v2h2v-2zm4 0h-2v2h2v-2zm4 0h-2v2h2v-2zm2-7h-1V2h-2v2H8V2H6v2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm0 16H5V9h14v11z"
    />
  </svg>
  <input
    className="c3"
    fontSize={
      Array [
        2,
        null,
        1,
      ]
    }
    id="test"
    placeholder="IconField"
    style={
      Object {
        "paddingLeft": 40,
        "paddingRight": undefined,
      }
    }
  />
</div>
`;

exports[`IconField renders icon button 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c3 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  width: 24px;
}

.c4 {
  outline: none;
}

.c2 {
  -webkit-font-smoothing: antialiased;
  display: inline-block;
  vertical-align: middle;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-family: inherit;
  font-weight: 700;
  line-height: 1.5;
  cursor: pointer;
  border-radius: 2px;
  border-width: 0;
  border-style: solid;
  font-size: 14px;
  padding: 9.5px 18px;
  background-color: #007aff;
  color: #fff;
  padding: 0;
  background-color: transparent;
  color: inherit;
}

.c2:hover {
  background-color: #049;
  color: #fff;
}

.c2:disabled {
  cursor: not-allowed;
  color: #4f6f8f;
  background-color: #edf0f3;
}

.c2:hover {
  background-color: transparent;
  color: inherit;
}

.c2 > div {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c2:disabled {
  background-color: transparent;
}

.c1 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  display: block;
  width: 100%;
  font-family: inherit;
  color: inherit;
  background-color: transparent;
  border-radius: 2px;
  border-width: 1px;
  border-style: solid;
  padding-top: 14px;
  padding-bottom: 14px;
  padding-left: 12px;
  padding-right: 12px;
  margin: 0;
  border-color: #c0cad5;
  font-size: 16px;
}

.c1::-webkit-input-placeholder {
  color: #4f6f8f;
}

.c1::-moz-placeholder {
  color: #4f6f8f;
}

.c1:-ms-input-placeholder {
  color: #4f6f8f;
}

.c1::placeholder {
  color: #4f6f8f;
}

.c1::-ms-clear {
  display: none;
}

.c1:focus {
  outline: 0;
  border-color: #007aff;
  box-shadow: 0 0 0 2px #007aff;
}

@media screen and (min-width:40em) {
  .c1 {
    font-size: 14px;
  }
}

<div
  className="c0"
>
  <input
    className="c1"
    fontSize={
      Array [
        2,
        null,
        1,
      ]
    }
    id="test"
    placeholder="IconField"
    style={
      Object {
        "paddingLeft": undefined,
        "paddingRight": 40,
      }
    }
  />
  <button
    className="c2"
    color="primary"
    style={
      Object {
        "alignSelf": "center",
        "flex": "none",
        "marginLeft": -32,
        "marginRight": 8,
        "pointerEvents": "auto",
        "position": "relative",
      }
    }
  >
    <div>
      <svg
        aria-hidden={true}
        className="c3 c4"
        fill="currentcolor"
        focusable={false}
        height={24}
        role="img"
        tabIndex={-1}
        viewBox="0 0 24 24"
        width={24}
      >
        <path
          d="M19 6.4L17.6 5 12 10.6 6.4 5 5 6.4l5.6 5.6L5 17.6 6.4 19l5.6-5.6 5.6 5.6 1.4-1.4-5.6-5.6L19 6.4z"
        />
      </svg>
    </div>
  </button>
</div>
`;

exports[`IconField renders icon, input and icon button together 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c1 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  width: 24px;
}

.c2 {
  outline: none;
}

.c5 {
  outline: none;
}

.c4 {
  -webkit-font-smoothing: antialiased;
  display: inline-block;
  vertical-align: middle;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-family: inherit;
  font-weight: 700;
  line-height: 1.5;
  cursor: pointer;
  border-radius: 2px;
  border-width: 0;
  border-style: solid;
  font-size: 14px;
  padding: 9.5px 18px;
  background-color: #007aff;
  color: #fff;
  padding: 0;
  background-color: transparent;
  color: inherit;
}

.c4:hover {
  background-color: #049;
  color: #fff;
}

.c4:disabled {
  cursor: not-allowed;
  color: #4f6f8f;
  background-color: #edf0f3;
}

.c4:hover {
  background-color: transparent;
  color: inherit;
}

.c4 > div {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c4:disabled {
  background-color: transparent;
}

.c3 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  display: block;
  width: 100%;
  font-family: inherit;
  color: inherit;
  background-color: transparent;
  border-radius: 2px;
  border-width: 1px;
  border-style: solid;
  padding-top: 14px;
  padding-bottom: 14px;
  padding-left: 12px;
  padding-right: 12px;
  margin: 0;
  border-color: #c0cad5;
  font-size: 16px;
}

.c3::-webkit-input-placeholder {
  color: #4f6f8f;
}

.c3::-moz-placeholder {
  color: #4f6f8f;
}

.c3:-ms-input-placeholder {
  color: #4f6f8f;
}

.c3::placeholder {
  color: #4f6f8f;
}

.c3::-ms-clear {
  display: none;
}

.c3:focus {
  outline: 0;
  border-color: #007aff;
  box-shadow: 0 0 0 2px #007aff;
}

@media screen and (min-width:40em) {
  .c3 {
    font-size: 14px;
  }
}

<div
  className="c0"
>
  <svg
    aria-hidden={true}
    className="c1 c2"
    fill="currentcolor"
    focusable={false}
    height={24}
    role="img"
    style={
      Object {
        "alignSelf": "center",
        "flex": "none",
        "marginLeft": 8,
        "marginRight": -32,
        "pointerEvents": "none",
        "position": "relative",
      }
    }
    tabIndex={-1}
    viewBox="0 0 24 24"
    width={24}
  >
    <path
      d="M9 11H7v2h2v-2zm4 0h-2v2h2v-2zm4 0h-2v2h2v-2zm2-7h-1V2h-2v2H8V2H6v2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm0 16H5V9h14v11z"
    />
  </svg>
  <input
    className="c3"
    fontSize={
      Array [
        2,
        null,
        1,
      ]
    }
    id="test"
    placeholder="IconField"
    style={
      Object {
        "paddingLeft": 40,
        "paddingRight": 40,
      }
    }
  />
  <button
    className="c4"
    color="primary"
    style={
      Object {
        "alignSelf": "center",
        "flex": "none",
        "marginLeft": -32,
        "marginRight": 8,
        "pointerEvents": "auto",
        "position": "relative",
      }
    }
  >
    <div>
      <svg
        aria-hidden={true}
        className="c1 c5"
        fill="currentcolor"
        focusable={false}
        height={24}
        role="img"
        tabIndex={-1}
        viewBox="0 0 24 24"
        width={24}
      >
        <path
          d="M19 6.4L17.6 5 12 10.6 6.4 5 5 6.4l5.6 5.6L5 17.6 6.4 19l5.6-5.6 5.6 5.6 1.4-1.4-5.6-5.6L19 6.4z"
        />
      </svg>
    </div>
  </button>
</div>
`;
